--- a/GlympsApp/Main.storyboard
+++ b/GlympsApp/Main.storyboard
@@ -2066,18 +2066,51 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XI5-US-tFs">
+                                <rect key="frame" x="97" y="94" width="220" height="46"/>
+                                <color key="backgroundColor" red="0.18202328679999999" green="0.51607710120000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="GUN-MC-cTG"/>
+                                    <constraint firstAttribute="width" constant="220" id="cgd-9V-hFA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                <state key="normal" title="New Users">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="23"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="refreshUsersBtnWasPressed:" destination="tax-kI-zzY" eventType="touchUpInside" id="32z-4c-9Lg"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="refresh-users" translatesAutoresizingMaskIntoConstraints="NO" id="MoZ-ul-fIl">
+                                <rect key="frame" x="107" y="97" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="FXK-d2-7bJ"/>
+                                    <constraint firstAttribute="width" constant="40" id="HID-xf-67t"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="UIl-RT-3gT" firstAttribute="centerY" secondItem="j9W-Kk-Kty" secondAttribute="centerY" id="5BS-vJ-IQL"/>
+                            <constraint firstItem="MoZ-ul-fIl" firstAttribute="centerY" secondItem="XI5-US-tFs" secondAttribute="centerY" id="7CB-zv-f4Q"/>
                             <constraint firstItem="7zD-oA-3Px" firstAttribute="top" secondItem="1JN-zF-ETQ" secondAttribute="top" constant="15" id="HWd-13-AIR"/>
+                            <constraint firstItem="XI5-US-tFs" firstAttribute="centerX" secondItem="j9W-Kk-Kty" secondAttribute="centerX" id="J0u-g1-Oke"/>
+                            <constraint firstItem="MoZ-ul-fIl" firstAttribute="leading" secondItem="XI5-US-tFs" secondAttribute="leading" constant="10" id="OaY-g3-CZc"/>
                             <constraint firstItem="UIl-RT-3gT" firstAttribute="centerX" secondItem="j9W-Kk-Kty" secondAttribute="centerX" id="fHz-cZ-dOc"/>
+                            <constraint firstItem="XI5-US-tFs" firstAttribute="top" secondItem="7zD-oA-3Px" secondAttribute="bottom" constant="50" id="nXl-Tq-PAk"/>
                             <constraint firstItem="7zD-oA-3Px" firstAttribute="centerX" secondItem="j9W-Kk-Kty" secondAttribute="centerX" id="oU6-ef-W21"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1JN-zF-ETQ"/>
                     </view>
                     <connections>
                         <outlet property="noUsersView" destination="UIl-RT-3gT" id="I7X-hf-VUr"/>
+                        <outlet property="refreshUsersBtn" destination="XI5-US-tFs" id="gnT-Dl-Jq3"/>
+                        <outlet property="refreshUsersImage" destination="MoZ-ul-fIl" id="IkF-qy-iVN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OKx-6P-Ma6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2562,7 +2595,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="314" height="105"/>
                                                         </imageView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWk-pA-JwP">
-                                                            <rect key="frame" x="284" y="5" width="25" height="25"/>
+                                                            <rect key="frame" x="259" y="5" width="50" height="50"/>
                                                             <state key="normal" image="play"/>
                                                             <connections>
                                                                 <action selector="videoMessageButtonWasPressed:" destination="DNZ-N0-lVq" eventType="touchUpInside" id="UHk-Eb-izc"/>
@@ -2858,12 +2891,25 @@
                                         <color key="textColor" red="0.8980392157" green="0.088846307720000003" blue="0.086284645049999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1FH-Us-Tlg">
+                                        <rect key="frame" x="10" y="10" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="QJT-Vp-ae8"/>
+                                            <constraint firstAttribute="width" constant="30" id="iQG-Tm-Gd0"/>
+                                        </constraints>
+                                        <state key="normal" image="jg_hud_error.png"/>
+                                        <connections>
+                                            <action selector="closeBtnWasPressed:" destination="kuk-V1-CbP" eventType="touchUpInside" id="fT8-M1-v0G"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="0mw-DJ-WZa"/>
+                                    <constraint firstItem="1FH-Us-Tlg" firstAttribute="top" secondItem="jaT-cv-uQX" secondAttribute="top" constant="10" id="1m2-ek-aIA"/>
                                     <constraint firstItem="thr-Nq-QIZ" firstAttribute="centerX" secondItem="Mwy-fg-VnG" secondAttribute="centerX" id="54g-Bo-ifn"/>
                                     <constraint firstItem="thr-Nq-QIZ" firstAttribute="top" secondItem="jaT-cv-uQX" secondAttribute="top" constant="20" id="8A7-JY-TC9"/>
+                                    <constraint firstItem="1FH-Us-Tlg" firstAttribute="leading" secondItem="jaT-cv-uQX" secondAttribute="leading" constant="10" id="Nst-Xw-fhK"/>
                                     <constraint firstItem="GBE-s9-6oU" firstAttribute="centerX" secondItem="Mwy-fg-VnG" secondAttribute="centerX" id="fs9-Il-llK"/>
                                     <constraint firstItem="tge-qf-eX8" firstAttribute="centerX" secondItem="Mwy-fg-VnG" secondAttribute="centerX" id="gdU-Mp-MLo"/>
                                     <constraint firstAttribute="bottom" secondItem="tge-qf-eX8" secondAttribute="bottom" constant="8" id="hWy-1j-tqf"/>
@@ -2888,6 +2934,7 @@
                     <connections>
                         <outlet property="blockForeverBtn" destination="GBE-s9-6oU" id="dXD-rg-b04"/>
                         <outlet property="blockTemporarilyBtn" destination="tge-qf-eX8" id="PzC-3f-Na5"/>
+                        <outlet property="closeBtn" destination="1FH-Us-Tlg" id="QEf-FU-3Js"/>
                         <outlet property="usernameLabel" destination="thr-Nq-QIZ" id="wNo-vR-T0g"/>
                     </connections>
                 </viewController>
@@ -2907,6 +2954,7 @@
         <image name="glymps_logo_with_title" width="60" height="44.666667938232422"/>
         <image name="group" width="170.66667175292969" height="170.66667175292969"/>
         <image name="infinity" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="jg_hud_error.png" width="32.666667938232422" height="32.666667938232422"/>
         <image name="menu-settings (filled)" width="6.3333334922790527" height="6.3333334922790527"/>
         <image name="message-icon1" width="192" height="192"/>
         <image name="modern-city2" width="360" height="164.66667175292969"/>
@@ -2914,6 +2962,7 @@
         <image name="paintedHeart" width="341.33334350585938" height="341.33334350585938"/>
         <image name="play" width="25" height="25"/>
         <image name="profile" width="21" height="23"/>
+        <image name="refresh-users" width="238.33332824707031" height="238.33332824707031"/>
         <image name="remove-user" width="85.333335876464844" height="85.333335876464844"/>
         <image name="share-with-email" width="240" height="240"/>
         <image name="share-with-facebook" width="170.66667175292969" height="170.66667175292969"/>
