--- a/GlympsApp/Welcome.storyboard
+++ b/GlympsApp/Welcome.storyboard
@@ -416,7 +416,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bku-Hu-rR4">
                                 <rect key="frame" x="20" y="88.333333333333314" width="374" height="647.66666666666674"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">This End-User License Agreement ("EULA") is a legal agreement between you and Glymps LLC.
+                                <string key="text">This End-User License Agreement ("EULA") is a legal agreement between you and Glymps LLC.
 
 This EULA agreement governs your acquisition and use of our Glymps software ("Software") directly from Glymps LLC or indirectly through a Glymps LLC authorized reseller or distributor ("Reseller").
 
@@ -496,7 +496,7 @@ If you would like to stop receiving marketing or promotional communications via 
 Changes to this Statement
 Glymps reserves the right to change this Privacy Policy from time to time. We will notify you about significant changes in the way we treat personal information by sending a notice to the primary email address specified in your account, by placing a prominent notice on our site, and/or by updating any privacy information on this page. Your continued use of the app and/or Services available through this app after such modifications will constitute your: (a) acknowledgment of the modified Privacy Policy; and (b) agreement to abide and be bound by that Policy.
 
-Effective as of May 1, 2019</mutableString>
+Effective as of May 1, 2019</string>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
